@@ -1,5 +1,7 @@
 *SVN*
 
+* Allow file uploads in Integration Tests.  Closes #11091 [RubyRedRick]
+
 * Refactor partial rendering into a PartialTemplate class. [Pratik]
 
 * Added that requests with JavaScript as the priority mime type in the accept header and no format extension in the parameters will be treated as though their format was :js when it comes to determining which template to render. This makes it possible for JS requests to automatically render action.js.rjs files without an explicit respond_to block  [DHH]
